PONG 2D FIXED - ADJUSTEMENT  TO FRAME FOR VISIBILITY (GONNA FINISH IT LATER)

--- a/srcs/frontend/trans/style.css
+++ b/srcs/frontend/trans/style.css
@@ -124,7 +124,7 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 103%;
+	width: 107%;
 	height: 100%;
 	object-fit: fill;
 	z-index: 10;
